# libgraffik

./: .clangd  .sample3.cpp.swp  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build.ps1  graphics.cpp  graphics.h  main.cpp  sample1.cpp  sample3.cpp
examples/: sample2.cpp  sample4.cpp
lib/: graphics.cpp  graphics.h
